updated texts with locales

--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -50,7 +50,7 @@
         "all": "Alla",
         "react": "React",
         "vue": "Vue",
-        "React Native": "React Native",
+        "reactNative": "React Native",
         "typeScript": "TypeScript",
         "python": "Python",
         "mobileApp": "Mobilapplikation",
