--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,7 +30,7 @@
         "myProjectsText": "Want to see what I have made? Take a look at some of the projects I’ve worked on. I have made counless personal projects and made huge impacts for the companies I’ve helped update there applications."
     },
     "aboutPage": {
-        "hi": "Hello I'm",
+        "hi": "Hello, I'm",
         "myNumber": "070 982 10 50",
         "myMail": "ida-lindgren@hotmail.com",
         "frontendDeveloper": "A Frontend Developer from Stockholm",
@@ -50,7 +50,7 @@
      "all": "All",
      "react": "React",
      "vue": "Vue",
-     "React Native": "React Native",
+     "reactNative": "React Native",
      "typeScript": "TypeScript",
      "python": "Python",
      "mobileApp": "Mobile Application",
