--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -33,7 +33,9 @@
         "hi": "Hello, I'm",
         "myNumber": "070 982 10 50",
         "myMail": "ida-lindgren@hotmail.com",
-        "frontendDeveloper": "A Frontend Developer from Stockholm",
+        "a": "A",
+        "from": "from",
+        "stockholm": "Stockholm",
         "frontendDeveloperText": "A creative and experienced Frontend developer with an Advanced Higher Vocational Education Diploma from Medieinstitutet - Stockholm. I have wide knowledge within applications, websites and extensions. Currently, I am seeking opportunities within a developing field.",
         "downloadCV": "Download CV",
         "getInTouch": "Get in touch",
@@ -45,26 +47,26 @@
         "sendMessage": "Send Message"
     },
     "galleryPage": {
-     "projects": "Projects",
-     "openProject": "Click on a project to open its link",
-     "all": "All",
-     "react": "React",
-     "vue": "Vue",
-     "reactNative": "React Native",
-     "typeScript": "TypeScript",
-     "python": "Python",
-     "mobileApp": "Mobile Application",
-     "mobileAppText": "With this app you can get cash back when you shop online from over 600 stores. The money is shared between you and an association of your choice.",
-     "expo": "Expo",
-     "browserExtension": "Browser Extension",
-      "browserExtensionText": "A browser tool that simplifies shopping with Sponsorhuset online.",
-      "sass": "SASS",
-      "catBox": "CatBox",
-      "catBoxText": "blah blah",
-      "supabase": "Supabase",
-      "tictactoe": "TicTacToe",
-      "tictactoeText": "A simple TicTacToe game for two players where the goal is to get three in a row.",
-      "webshop": "Webshop [Link missing]",
-      "webshopText": "A group work that was done during my education at the media institute. A wallpaper webshop."
+        "projects": "Projects",
+        "openProject": "Click on a project to open its link",
+        "all": "All",
+        "react": "React",
+        "vue": "Vue",
+        "reactNative": "React Native",
+        "typeScript": "TypeScript",
+        "python": "Python",
+        "mobileApp": "Mobile Application",
+        "mobileAppText": "With this app you can get cash back when you shop online from over 600 stores. The money is shared between you and an association of your choice.",
+        "expo": "Expo",
+        "browserExtension": "Browser Extension",
+        "browserExtensionText": "A browser tool that simplifies shopping with Sponsorhuset online.",
+        "sass": "SASS",
+        "catBox": "CatBox",
+        "catBoxText": "blah blah",
+        "supabase": "Supabase",
+        "tictactoe": "TicTacToe",
+        "tictactoeText": "A simple TicTacToe game for two players where the goal is to get three in a row.",
+        "webshop": "Webshop [Link missing]",
+        "webshopText": "A group work that was done during my education at the media institute. A wallpaper webshop."
     }
 }
