--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -62,7 +62,7 @@
         "browserExtensionText": "Ett webbläsarverktyg som förenklar shopping med Sponsorhuset online.",
         "sass": "SASS",
         "catBox": "CatBox",
-        "catBoxText": "blah blah",
+        "catBoxText": "Ett interaktivt spel där spelaren lär sig flexbox-attribut.",
         "supabase": "Supabase",
         "tictactoe": "TicTacToe",
         "tictactoeText": "Ett enkelt TicTacToe-spel för två spelare där målet är att få tre i rad.",
