Added locales footer

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,6 +11,7 @@
         "github": "Github",
         "linkedIn": "LinkedIn",
         "mail": "Mail",
+        "quote": "The Office quote of the day",
         "copyright": "© Copyright 2023. All Rights Reserved"
     },
     "homePage": {
