changed name of androidDev

--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -22,7 +22,7 @@
         "softDevText": "Erfarenhet av både funktionell och objektorienterad programmering: Python, JavaScript, TypeScript",
         "frontDev": "Frontendutveckling",
         "frontDevText": "Passionerad för UI/UX. Över 2 års utvecklingserfarenhet i HTML, CSS, JS, React och NextJS-ramverk.",
-        "androidDev": "Android/iOS-utveckling",
+        "androidDev": "Mobilapputveckling",
         "androidDevText": "Skicklig i att utveckla hybridmobilappar och plattformsoberoende lösningar med hjälp av React Native-ramverket.",
         "aboutMe": "Vem är jag?",
         "aboutMeText": "Nyfiken på min professionella resa eller att etablera en kontakt? Utforska mitt omfattande CV för en detaljerad översikt av min erfarenhet och mina prestationer. Tveka inte att höra av dig om du vill diskutera potentiella samarbeten eller bara vilja få kontakt!",
