--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -55,7 +55,9 @@
         "vue": "Vue",
         "reactNative": "React Native",
         "typeScript": "TypeScript",
+        "javaScript": "JavaScript",
         "reactThreeFiber": "React Three Fiber",
+        "threejs": "Three.js",
         "mobileApp": "Mobile Application",
         "mobileAppText": "With this app you can get cash back when you shop online from over 600 stores. The money is shared between you and an association of your choice.",
         "expo": "Expo",
@@ -68,6 +70,8 @@
         "tictactoe": "TicTacToe",
         "tictactoeText": "A simple TicTacToe game for two players where the goal is to get three in a row.",
         "houseGenerator": "Random House Generator",
-        "houseGeneratorText": "Random House Generator creates unique house designs by randomizing shape, size, and the number of houses. Each use generates a different set, offering quick and varied architectural inspiration."
+        "houseGeneratorText": "An API that generated random houses, varying in shape, rotation, size and quantity.",
+        "gameboy": "3D Gameboy Portfolio",
+        "gameboyText": "An interactive 3D portfolio showcasing my work, expertise, projects and creativity."
     }
 }
