fixed text and expertise

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,7 +25,7 @@
         "androidDev": "Android/iOS Dev",
         "androidDevText": "Skilled in developing hybrid mobile apps and cross–platform solutions using the React Native framework.",
         "aboutMe": "Who am I?",
-        "aboutMeText": "Curious about my professional journey or establish a connection? Explore my comprehensive CV for a detailed overview of my experience and achievements. Feel free to reach out and drop me a message if you'd like to discuss potential collaborations or simply connect!",
+        "aboutMeText": "Curious about my professional journey or establish a connection? Explore my CV for a detailed overview of my experience and achievements. Feel free to reach out and drop me a message if you'd like to connect!",
         "buttonText": "Learn More",
         "myProjects": "My Projects",
         "myProjectsText": "Want to see what I have made? Take a look at some of the projects I’ve worked on. I have made counless personal projects and made huge impacts for the companies I’ve helped update there applications."
