--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -25,7 +25,7 @@
         "androidDev": "Mobilapputveckling",
         "androidDevText": "Skicklig i att utveckla hybridmobilappar och plattformsoberoende lösningar med hjälp av React Native-ramverket.",
         "aboutMe": "Vem är jag?",
-        "aboutMeText": "Nyfiken på min professionella resa eller att etablera en kontakt? Utforska mitt omfattande CV för en detaljerad översikt av min erfarenhet och mina prestationer. Tveka inte att höra av dig om du vill diskutera potentiella samarbeten eller bara vilja få kontakt!",
+        "aboutMeText": "Nyfiken på min professionella resa eller att etablera en kontakt? Utforska mitt CV för en detaljerad översikt av min erfarenhet och mina prestationer. Tveka inte att lämna ett meddelande till mig!",
         "buttonText": "Läs mer",
         "myProjects": "Mina projekt",
         "myProjectsText": "Vill du se vad jag har gjort? Ta en titt på några av de projekt jag har arbetat med. Jag har gjort många personliga projekt och gjort stora insatser för de företag jag har hjälpt att uppdatera deras applikationer."
